[package]
name = "wasm_engine"
version = "0.1.0"
authors = ["suncy <suncy@yineng.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
log = {version="0.4.14", features = ["release_max_level_info"]}
getrandom = "=0.2.8" 

# astc_decoder_wasmbindgen = { git = "http://ser.yinengyun.com:10080/tech/astc_decoder.git", branch="master" }

# gui_web = { git = "https://github.com/GaiaWorld/pi_show.git", branch="wasm-bindgen" }
gui_web = { path = "../pi_show/gui_web" }

# res_mgr_web = { git = "https://github.com/GaiaWorld/pi_show.git", branch="wasm-bindgen" }
res_mgr_web = { path = "../pi_show/res_mgr_web"}

# pi_web_logger = { git = "http://ser.yinengyun.com:10082/tech/pi_web_logger.git", branch="master" }
pi_web_logger = { path = "../pi_web_logger"}

# a星相关模块
pi_path_finding = "0.6"

# 避障算法相关
pi_orca = "0.4"
# pi_orca = {path = "../pi_orca"}

# 四叉树和tilemap相关
pi_spatial = "0.5"
wee_alloc = "0.4"
# pi_spatial = {path = "../pi_spatial"}
# talc = {version = "4.2", default-features = false, features = ["lock_api", "allocator"]}
lol_alloc = {path = "../lol_alloc"}
ahash = "0.8.6"
pi_style = {version = "0.1.11", registry = "yn"}
pi_null = "=0.1.0"
# pi_share = "0.4"
pi_share = {version = "0.4", features = ["no_atomic"]}
pi_atom = {version = "0.5", features = ["pointer_width_32"]}

# [patch.crates-io]
# talc = {path="../talc"}

[profile.release]
debug= true
lto = true              # 这为LLVM提供了更多内联和修剪功能的机会。它不仅使.wasm尺寸更小，而且在运行时也更快！缺点是编译将花费更长的时间
# opt-level = 's'       # 默认情况下，对LLVM的优化通道进行了调整，以提高速度，而不是大小。我们可以通过修改以下
# opt-level = "z"       # 了更积极地优化尺寸，以进一步的潜在速度成本
opt-level = "z"         # 请注意，令人惊讶的是，opt-level = "s"有时二进制文件的大小可能小于opt-level = "z"。总是测量！
# panic = 'abort'
codegen-units = 1
dwarf-debug-info = true

[profile.dev]
dwarf-debug-info = true

[patch.crates-io]
pi_atom = {path = "D://0_rust/pi_atom"}
pi_share = {path = "../pi_share"}
pi_assets = {path = "../pi_assets"}
pi_flex_layout = {path = "D://0_rust/pi_flex_layout"}

[patch.yn]
pi_style = {path = "D://0_rust/pi_style"}