[package]
name = "wasm_engine"
version = "0.1.0"
authors = ["suncy <suncy@yineng.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.86", features = ["serde-serialize"] }
log = "0.4.14"

# astc_decoder_wasmbindgen = { git = "http://ser.yinengyun.com:10080/tech/astc_decoder.git", branch="master" }

# gui_web = { git = "https://github.com/GaiaWorld/pi_show.git", branch="wasm-bindgen" }
gui_web = { path = "../pi_show/gui_web" }

# res_mgr_web = { git = "https://github.com/GaiaWorld/pi_show.git", branch="wasm-bindgen" }
res_mgr_web = { path = "../pi_show/res_mgr_web"}

# pi_web_logger = { git = "http://ser.yinengyun.com:10082/tech/pi_web_logger.git", branch="master" }
pi_web_logger = { path = "../pi_web_logger"}

# a星相关模块
pi_path_finding = "0.6"

# 避障算法相关
pi_orca = "0.4"
# pi_orca = {path = "../pi_orca"}

# 四叉树和tilemap相关
pi_spatial = "0.5"
# pi_spatial = {path = "../pi_spatial"}

# lol_alloc = {path = "../lol_alloc"}
pi_bon_decode = {version = "0.1", registry = "yn"}

[profile.release]
debug= true
lto = true              # 这为LLVM提供了更多内联和修剪功能的机会。它不仅使.wasm尺寸更小，而且在运行时也更快！缺点是编译将花费更长的时间
# opt-level = 's'       # 默认情况下，对LLVM的优化通道进行了调整，以提高速度，而不是大小。我们可以通过修改以下
# opt-level = "z"       # 了更积极地优化尺寸，以进一步的潜在速度成本
opt-level = "z"         # 请注意，令人惊讶的是，opt-level = "s"有时二进制文件的大小可能小于opt-level = "z"。总是测量！
# panic = 'abort'
codegen-units = 1
dwarf-debug-info = true

[profile.dev]

[patch.crates-io]
pi_share = {path = "../pi_share"}