[package]
name = "wasm_engine"
version = "0.1.0"
authors = ["suncy <suncy@yineng.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
const_memory = []

[dependencies]
wasm-bindgen = { version = "0.2.86", features = ["serde-serialize"] }
log = "0.4.14"
talc = "=4.4.0"
# astc_decoder_wasmbindgen = { git = "http://ser.yinengyun.com:10080/tech/astc_decoder.git", branch="master" }

# gui_web = { git = "https://github.com/GaiaWorld/pi_show.git", branch="wasm-bindgen" }
gui_web = { path = "../pi_show/gui_web" }

# res_mgr_web = { git = "https://github.com/GaiaWorld/pi_show.git", branch="wasm-bindgen" }
res_mgr_web = { path = "../pi_show/res_mgr_web"}

# pi_web_logger = { git = "http://ser.yinengyun.com:10082/tech/pi_web_logger.git", branch="master" }
pi_web_logger = { path = "../pi_web_logger"}

# a星相关模块
pi_path_finding = "0.6"

# 任务池
pi_export_task_pool = { path = "../pi_show/task_pool"}
pi_cancel_timer = "*"

# 避障算法相关
pi_orca = "0.4"
# pi_orca = {path = "../pi_orca"}

# 四叉树和tilemap相关
pi_spatial = "0.5"
# pi_spatial = {path = "../pi_spatial"}

pi_bon_decode = {version = "=0.1.2", registry = "yn"} # pi_wasm1.x， 使用pi_bon_decode@0.1.2版本, 否则使用0.1
pi_polygon = "=0.1.0"
postcard = "=1.1.1"
cobs = "=0.2.3"


tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = {version = "0.3.1", features = ["registry", "env-filter"]}
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2.1"
tracing-core = "*"
tracing-log = "0.1.2"
spade = "=2.2.0"
pi_assets = "=0.14.7"
pi_map = "=0.2.2"


bumpalo = "=3.13"
backtrace = "=0.3.74"


[profile.release]
debug= true
lto = true              # 这为LLVM提供了更多内联和修剪功能的机会。它不仅使.wasm尺寸更小，而且在运行时也更快！缺点是编译将花费更长的时间
# opt-level = 's'       # 默认情况下，对LLVM的优化通道进行了调整，以提高速度，而不是大小。我们可以通过修改以下
# opt-level = "z"       # 了更积极地优化尺寸，以进一步的潜在速度成本
opt-level = "z"         # 请注意，令人惊讶的是，opt-level = "s"有时二进制文件的大小可能小于opt-level = "z"。总是测量！
# panic = 'abort'
codegen-units = 1
dwarf-debug-info = true

[profile.dev]

[patch.crates-io]
pi_share = {git = "https://github.com/GaiaWorld/pi_share.git", branch="new_inteface"}
pi_assets = {git = "https://github.com/GaiaWorld/pi_assets.git", branch="v0.14"}
pi_key_alloter = {git = "https://github.com/GaiaWorld/pi_key_alloter.git", branch="v0.5"}
# pi_weight_task = {path = "../../0_rust/pi_weight_task"}
[patch.yn]
# pi_export_task_pool = {path = "../../0_rust/pi_export/crates/task_pool"}
